--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "javiereguiluz/easyadmin-bundle": "^1.17",
+        "knplabs/doctrine-behaviors": "^1.5",
+        "ohwee/auto-form-bundle": "dev-master",
+        "ohwee/i18n-doctrine-bundle": "dev-master",
+        "ohwee/translation-form-bundle": "dev-master",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
@@ -21,6 +25,7 @@
         "symfony/security-bundle": "^4.0",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/translation": "^4.0",
         "symfony/validator": "^4.0",
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-pack": "*",
@@ -76,5 +81,10 @@
             "id": "01C537P1XVZ3AVR6Y4PHFDNBXR",
             "allow-contrib": false
         }
-    }
+    },
+    "repositories": [
+        { "type": "vcs", "url": "https://github.com/DavidT-Ohwee/TranslationFormBundle" },
+        { "type": "vcs", "url": "https://github.com/DavidT-Ohwee/AutoFormBundle" },
+        { "type": "vcs", "url": "https://github.com/DavidT-Ohwee/I18nDoctrineBundle" }
+    ]
 }
