--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,7 +17,7 @@ doctrine:
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+#        auto_mapping: true
         mappings:
             App:
                 is_bundle: false
@@ -25,3 +25,11 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        auto_mapping: true
+        filters:
+            oneLocale:
+                class: A2lix\I18nDoctrineBundle\Doctrine\ORM\Filter\ManyLocalesFilter
+                enabled: true
+
+a2lix_i18n_doctrine:
+    manager_registry: doctrine
