--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,4 +1,4 @@
 twig:
-    paths: ['%kernel.project_dir%/templates']
+    paths: ['%kernel.project_dir%/templates', '%kernel.project_dir%/vendor/ohwee/translation-form-bundle/Resources/views']
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
