--- a/config/packages/translation_form.yaml
+++ b/config/packages/translation_form.yaml
@@ -3,4 +3,4 @@ a2lix_translation_form:
     locales: [en, fr, es, de]      # [1-a]
     default_locale: en             # [1-b]
     required_locales: [fr]         # [1-c]
-    templating: "default2.html.twig"      # [2]
+    templating: "default.html.twig"      # [2]
