--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "javiereguiluz/easyadmin-bundle": "^1.17",
-        "knplabs/doctrine-behaviors": "^1.5",
         "ohwee/auto-form-bundle": "dev-master",
         "ohwee/i18n-doctrine-bundle": "dev-master",
         "ohwee/translation-form-bundle": "dev-master",
@@ -29,7 +28,8 @@
         "symfony/validator": "^4.0",
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-pack": "*",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "vich/uploader-bundle": "^1.8"
     },
     "require-dev": {
         "symfony/browser-kit": "^4.0",
