--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,8 +1,8 @@
 framework:
     secret: '%env(APP_SECRET)%'
-    #default_locale: en
+    default_locale: fr
     #csrf_protection: ~
-    #http_method_override: true
+    http_method_override: true
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
