--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,7 +1,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
+    locale: 'fr'
+    app.path.test_images: /uploads/images/test_image
 
 services:
     # default configuration for services in *this* file
