example entity formbuilder custom ok

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -5,12 +5,12 @@ easy_admin:
             form:
                 fields:
                     - { property: 'translations', type: 'A2lix\TranslationFormBundle\Form\Type\TranslationsType' }
-                    - { property: 'imageFile', type: 'vich_image' }
+#                    - { property: 'imageFile', type: 'vich_image' }
             list:
-                fields:
-                    - { property: 'image', type: 'image', base_path: '%app.path.test_images%' }
-                    - { property: 'translations' }
-#        # List the entity class name you want to manage
+#                fields:
+#                    - { property: 'image', type: 'image', base_path: '%app.path.test_images%' }
+#                    - { property: 'translations' }
+        # List the entity class name you want to manage
 #        - App\Entity\Product
 #        - App\Entity\Category
 #        - App\Entity\User
