--- a/config/packages/translation_form.yaml
+++ b/config/packages/translation_form.yaml
@@ -1,6 +1,6 @@
 a2lix_translation_form:
     locale_provider: default       # [1]
     locales: [en, fr, es, de]      # [1-a]
-    default_locale: en             # [1-b]
+    default_locale: fr             # [1-b]
     required_locales: [fr]         # [1-c]
     templating: "default.html.twig"      # [2]
